--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,24 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="sv_main_padding_bottom">32dp</dimen>
-    <dimen name="activity_title_text_size">28sp</dimen>
+    <dimen name="activity_title_text_size">26sp</dimen>
     <dimen name="bottom_main_btn_margin_top">48dp</dimen>
     <dimen name="general_btn_margin">24dp</dimen>
     <dimen name="social_icons_size">42dp</dimen>
     <dimen name="social_icons_margin">20dp</dimen>
-    <dimen name="general_icons_size">42dp</dimen>
-    <dimen name="general_icons_margin">20dp</dimen>
     <dimen name="small_text_size">16sp</dimen>
     <dimen name="medium_btn_height">60dp</dimen>
     <dimen name="round_btn_corner_radius">24dp</dimen>
     <dimen name="login_layout_margin">24dp</dimen>
-    <dimen name="button_margin_top_input">8dp</dimen>
+    <dimen name="top_input_button_margin">8dp</dimen>
     <dimen name="lottie_square_animation_size">300dp</dimen>
     <dimen name="user_info_display_margin">24dp</dimen>
     <dimen name="user_activity_list_btn_height">72dp</dimen>
     <dimen name="user_activity_list_btn_text_size">17sp</dimen>
     <dimen name="user_activity_list_btn_icon_padding">24dp</dimen>
-    <dimen name="me_fragment_user_profile_img_size">100dp</dimen>
+    <dimen name="acc_frag_user_profile_img_size">100dp</dimen>
     <dimen name="home_fragment_user_img_size">40dp</dimen>
     <dimen name="dialog_msg_max_width">350dp</dimen>
     <dimen name="product_feed_text_size">17sp</dimen>
