--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,6 @@
     <color name="grey">#7E7E7E</color>
     <color name="textInputOutlineColor">#45D5E8</color>
     <color name="rating_star_color">#F9D31E</color>
-    <color name="product_cardview_background">#ECF8FA</color>
-    <color name="product_cardview_background_dark">#1D2325</color>
+    <color name="product_card_view_background">#FEFFFF</color>
+    <color name="product_card_view_background_dark">#F2020E1B</color>
 </resources>
