--- a/app/src/main/res/drawable/product_cardview_background.xml
+++ b/app/src/main/res/drawable/product_cardview_background.xml
@@ -4,7 +4,7 @@
         <shape>
             <gradient android:angle="90"
                 android:startColor="#dfe9f3"
-                android:endColor="#ffffff"
+                android:endColor="#FBFDFD"
                 android:type="linear"/>
         </shape>
     </item>
