--- a/app/src/main/res/layout/product_cardview.xml
+++ b/app/src/main/res/layout/product_cardview.xml
@@ -37,7 +37,7 @@
             android:layout_marginEnd="12dp"
             android:maxLines="3"
             android:textColor="?attr/colorPrimaryDark"
-            android:textSize="24sp"
+            android:textSize="18sp"
             app:layout_constraintEnd_toStartOf="@id/star_btn"
             app:layout_constraintStart_toStartOf="@id/lr_guideline"
             app:layout_constraintTop_toTopOf="parent"
@@ -48,10 +48,12 @@
             style="@style/Widget.Scannera.TextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="18dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="18dp"
+            android:layout_marginEnd="12dp"
             android:maxLines="1"
-            android:textColor="?attr/colorPrimaryDark"
-            android:textSize="16sp"
+            android:textColor="@color/blue_grey"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/lr_guideline"
             app:layout_constraintTop_toBottomOf="@id/mid_h_guideline"
@@ -62,10 +64,12 @@
             style="@style/Widget.Scannera.TextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="12dp"
             android:maxLines="1"
             android:textColor="?attr/colorPrimaryDark"
-            android:textSize="18sp"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/lr_guideline"
             app:layout_constraintTop_toBottomOf="@id/cardview_product_brand" />
