--- a/app/src/main/res/layout/product_cardview.xml
+++ b/app/src/main/res/layout/product_cardview.xml
@@ -33,15 +33,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="12dp"
             android:layout_marginEnd="12dp"
             android:maxLines="3"
             android:textColor="?attr/colorPrimaryDark"
             android:textSize="18sp"
-            app:layout_constraintEnd_toStartOf="@id/star_btn"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/lr_guideline"
-            app:layout_constraintTop_toTopOf="parent"
-            card_view:layout_constraintBottom_toTopOf="@+id/mid_h_guideline" />
+            app:layout_constraintTop_toBottomOf="@id/star_btn" />
 
         <TextView
             android:id="@+id/cardview_product_brand"
@@ -56,8 +55,9 @@
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/lr_guideline"
-            app:layout_constraintTop_toBottomOf="@id/mid_h_guideline"
-            tools:layout_editor_absoluteY="122dp" />
+            app:layout_constraintTop_toBottomOf="@id/cardview_product_name"
+            card_view:layout_constraintBottom_toTopOf="@id/mid_h_guideline"
+            card_view:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/cardview_product_price"
@@ -72,7 +72,7 @@
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/lr_guideline"
-            app:layout_constraintTop_toBottomOf="@id/cardview_product_brand" />
+            app:layout_constraintTop_toBottomOf="@id/mid_h_guideline" />
 
         <ImageButton
             android:id="@+id/star_btn"
@@ -99,7 +99,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            card_view:layout_constraintGuide_percent="0.5" />
+            card_view:layout_constraintGuide_percent="0.75" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
