--- a/app/src/main/res/layout/product_cardview.xml
+++ b/app/src/main/res/layout/product_cardview.xml
@@ -64,9 +64,7 @@
             style="@style/Widget.Scannera.TextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="12dp"
+            android:layout_margin="12dp"
             android:maxLines="1"
             android:textColor="?attr/colorPrimaryDark"
             android:textSize="16sp"
