Implemented the first part of product comparisons. Implemented a feature that enlarges the image in the product comparisons activity on image click.

--- a/app/src/main/res/layout/activity_product_comparisons.xml
+++ b/app/src/main/res/layout/activity_product_comparisons.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--<androidx.core.widget.NestedScrollView-->
+<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    xmlns:tools="http://schemas.android.com/tools"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="match_parent"-->
+<!--    tools:context=".ProductComparisonsActivity">-->
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ProductComparisonsActivity">
+    android:layout_height="match_parent">
+    <!--        android:paddingBottom="@dimen/sv_main_padding_bottom">-->
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
@@ -36,5 +45,151 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/app_bar" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/activity_title">
+
+        <ImageView
+            android:id="@+id/comparisons_product_look_pic"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="12dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/lr_guideline"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/star_btn" />
+
+        <TextView
+            android:id="@+id/product_category_label"
+            style="@style/Widget.Scannera.TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="12dp"
+            android:text="@string/category"
+            android:textColor="@color/black"
+            android:textSize="@dimen/comparisons_activity_text_size"
+            app:layout_constraintBottom_toBottomOf="@id/star_btn"
+            app:layout_constraintEnd_toStartOf="@id/lr_guideline"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/star_btn" />
+
+        <TextView
+            android:id="@+id/product_category_value"
+            style="@style/Widget.Scannera.TextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="12dp"
+            android:maxLines="3"
+            android:textColor="?attr/colorPrimaryDark"
+            android:textSize="@dimen/comparisons_activity_text_size"
+            app:layout_constraintBottom_toBottomOf="@id/product_category_label"
+            app:layout_constraintEnd_toStartOf="@id/star_btn"
+            app:layout_constraintStart_toEndOf="@id/lr_guideline"
+            app:layout_constraintTop_toTopOf="@id/product_category_label" />
+
+        <TextView
+            android:id="@+id/product_name_label"
+            style="@style/Widget.Scannera.TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="12dp"
+            android:text="@string/name"
+            android:textColor="@color/black"
+            android:textSize="@dimen/comparisons_activity_text_size"
+            app:layout_constraintStart_toEndOf="@id/lr_guideline"
+            app:layout_constraintTop_toBottomOf="@id/product_category_value" />
+
+        <TextView
+            android:id="@+id/product_name_value"
+            style="@style/Widget.Scannera.TextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="12dp"
+            android:maxLines="3"
+            android:textColor="?attr/colorPrimaryDark"
+            android:textSize="@dimen/comparisons_activity_text_size"
+            app:layout_constraintBottom_toBottomOf="@id/product_name_label"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/product_name_label"
+            app:layout_constraintTop_toTopOf="@id/product_name_label" />
+
+        <TextView
+            android:id="@+id/product_brand_label"
+            style="@style/Widget.Scannera.TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="12dp"
+            android:text="@string/brand"
+            android:textColor="@color/black"
+            android:textSize="@dimen/comparisons_activity_text_size"
+            app:layout_constraintStart_toEndOf="@id/lr_guideline"
+            app:layout_constraintTop_toBottomOf="@id/product_name_value" />
+
+        <TextView
+            android:id="@+id/product_brand_value"
+            style="@style/Widget.Scannera.TextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="12dp"
+            android:maxLines="3"
+            android:textColor="@color/blue_grey"
+            android:textSize="@dimen/comparisons_activity_text_size"
+            app:layout_constraintBottom_toBottomOf="@id/product_brand_label"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/product_brand_label"
+            app:layout_constraintTop_toTopOf="@id/product_brand_label" />
+
+        <TextView
+            android:id="@+id/product_price_label"
+            style="@style/Widget.Scannera.TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="12dp"
+            android:text="@string/price"
+            android:textColor="@color/black"
+            android:textSize="@dimen/comparisons_activity_text_size"
+            app:layout_constraintStart_toEndOf="@id/lr_guideline"
+            app:layout_constraintTop_toBottomOf="@id/product_brand_value" />
+
+        <TextView
+            android:id="@+id/product_price_value"
+            style="@style/Widget.Scannera.TextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="12dp"
+            android:maxLines="1"
+            android:textColor="?attr/colorPrimaryDark"
+            android:textSize="@dimen/comparisons_activity_text_size"
+            app:layout_constraintBottom_toBottomOf="@id/product_price_label"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/product_price_label"
+            app:layout_constraintTop_toTopOf="@id/product_price_label" />
+
+        <ImageButton
+            android:id="@+id/star_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="12dp"
+            android:background="#00ffffff"
+            android:contentDescription="@string/product_star_btn_content_description"
+            android:src="@android:drawable/btn_star"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/lr_guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.4" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
