--- a/app/src/main/res/layout/product_cardview.xml
+++ b/app/src/main/res/layout/product_cardview.xml
@@ -22,6 +22,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_margin="12dp"
+            android:adjustViewBounds="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/lr_guideline"
             app:layout_constraintStart_toStartOf="parent"
@@ -32,9 +33,7 @@
             style="@style/Widget.Scannera.TextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="12dp"
+            android:layout_margin="12dp"
             android:maxLines="3"
             android:textColor="?attr/colorPrimaryDark"
             android:textSize="18sp"
