--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,4 +25,5 @@
     <dimen name="product_feed_h_spacing">24dp</dimen>
     <dimen name="account_info_elem_margin">24dp</dimen>
     <dimen name="account_info_value_margin_end">12dp</dimen>
+    <dimen name="comparisons_activity_text_size">16sp</dimen>
 </resources>
