--- a/app/src/main/res/layout/activity_product_comparisons.xml
+++ b/app/src/main/res/layout/activity_product_comparisons.xml
@@ -53,7 +53,8 @@
         android:layout_marginTop="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/activity_title">
+        app:layout_constraintTop_toBottomOf="@id/activity_title"
+        android:background="@drawable/border_line_bottom">
 
         <ImageView
             android:id="@+id/comparisons_product_look_pic"
@@ -219,5 +220,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/nutritional_info_label" />
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/comparisons_tab_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/nutrition_recyclerView">
+
+    <com.google.android.material.tabs.TabItem
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/similar_products"/>
+
+    </com.google.android.material.tabs.TabLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
