--- a/app/src/main/res/drawable/nutritional_attribute_cardview_background.xml
+++ b/app/src/main/res/drawable/nutritional_attribute_cardview_background.xml
@@ -3,8 +3,8 @@
     <item>
         <shape>
             <gradient android:angle="90"
-                android:startColor="#dfe9f3"
-                android:endColor="#FBFDFD"
+                android:startColor="#09203f"
+                android:endColor="#37698F"
                 android:type="linear"/>
         </shape>
     </item>
