--- a/app/src/main/res/layout/cardview_nutritional_attribute.xml
+++ b/app/src/main/res/layout/cardview_nutritional_attribute.xml
@@ -15,7 +15,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="110dp"
         android:layout_height="110dp"
-        android:background="@drawable/product_cardview_background">
+        android:background="@drawable/nutritional_attribute_cardview_background">
 
         <TextView
             android:id="@+id/attribute_value"
@@ -25,7 +25,7 @@
             android:padding="12dp"
             android:maxLines="2"
             android:gravity="center"
-            android:textColor="?attr/colorPrimaryDark"
+            android:textColor="@color/white"
             android:textSize="@dimen/comparisons_activity_text_size"
             app:layout_constraintBottom_toTopOf="@id/attribute_name"
             card_view:layout_constraintEnd_toEndOf="parent"
@@ -42,7 +42,7 @@
             android:layout_marginBottom="12dp"
             android:gravity="center"
             android:maxLines="2"
-            android:textColor="?attr/colorPrimaryDark"
+            android:textColor="@color/white"
             android:textSize="@dimen/comparisons_activity_text_size"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintEnd_toEndOf="parent"
