--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,14 +13,18 @@
         android:layout_height="wrap_content"
         >
 
-        <FrameLayout
-            android:id="@+id/login_icon_fragment"
+        <ImageView
+            android:id="@+id/scannera_login_icon"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/scannera_ictxt"
             app:layout_constraintBottom_toTopOf="@+id/split_guideline"
             app:layout_constraintEnd_toStartOf="@+id/guideline4"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/login_title_image" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline3"
