Added android:ellipsize="end" to textviews that may contain a long string, to show 3 dots once reached length limitation

--- a/app/src/main/res/layout/activity_product_comparisons.xml
+++ b/app/src/main/res/layout/activity_product_comparisons.xml
@@ -83,7 +83,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="12dp"
-                android:maxLines="3"
+                android:ellipsize="end"
+                android:maxLines="2"
                 android:textColor="?attr/colorPrimaryDark"
                 android:textSize="@dimen/comparisons_activity_text_size"
                 app:layout_constraintBottom_toBottomOf="@id/product_category_label"
@@ -110,6 +111,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="12dp"
+                android:ellipsize="end"
                 android:maxLines="3"
                 android:textColor="?attr/colorPrimaryDark"
                 android:textSize="@dimen/comparisons_activity_text_size"
@@ -137,9 +139,10 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="12dp"
-                android:maxLines="3"
+                android:maxLines="2"
                 android:textColor="@color/blue_grey"
                 android:textSize="@dimen/comparisons_activity_text_size"
+                android:ellipsize="end"
                 app:layout_constraintBottom_toBottomOf="@id/product_brand_label"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/product_brand_label"
@@ -164,6 +167,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="12dp"
+                android:ellipsize="end"
                 android:maxLines="1"
                 android:textColor="?attr/colorPrimaryDark"
                 android:textSize="@dimen/comparisons_activity_text_size"
