--- a/app/src/main/res/layout/cardview_product.xml
+++ b/app/src/main/res/layout/cardview_product.xml
@@ -34,7 +34,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="12dp"
-            android:maxLines="3"
+            android:ellipsize="end"
+            android:maxLines="2"
             android:textColor="?attr/colorPrimaryDark"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -49,6 +50,7 @@
             android:layout_marginStart="12dp"
             android:layout_marginTop="18dp"
             android:layout_marginEnd="12dp"
+            android:ellipsize="end"
             android:maxLines="1"
             android:textColor="@color/blue_grey"
             android:textSize="18sp"
@@ -64,6 +66,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="12dp"
+            android:ellipsize="end"
             android:maxLines="1"
             android:textColor="?attr/colorPrimaryDark"
             android:textSize="16sp"
