--- a/app/src/main/res/layout/activity_product_feed.xml
+++ b/app/src/main/res/layout/activity_product_feed.xml
@@ -81,7 +81,7 @@
                     android:hint="@string/enter_info_hint"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:maxLength="30"/>
+                    android:maxLength="50"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -102,7 +102,7 @@
                     android:layout_weight="1"
                     android:inputType="textAutoComplete"
                     android:hint="@string/category_drop_down_menu_hint"
-                    android:maxLength="30"
+                    android:maxLength="50"
                     />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -144,6 +144,8 @@
                 style="@style/Widget.Scannera.ProductFeedTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="2"
                 android:layout_marginStart="@dimen/product_feed_input_margin_start"
                 android:layout_marginEnd="@dimen/product_feed_input_margin_end"
                 android:textColor="?attr/colorPrimaryDark"
@@ -191,6 +193,8 @@
                 style="@style/Widget.Scannera.ProductFeedTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="3"
                 android:layout_marginStart="@dimen/product_feed_input_margin_start"
                 android:layout_marginEnd="@dimen/product_feed_input_margin_end"
                 android:textColor="?attr/colorPrimaryDark"
@@ -241,6 +245,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/product_feed_input_margin_start"
                 android:layout_marginEnd="@dimen/product_feed_input_margin_end"
+                android:ellipsize="end"
+                android:maxLines="1"
                 android:textColor="?attr/colorPrimaryDark"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -288,6 +294,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/product_feed_input_margin_start"
                 android:layout_marginEnd="@dimen/product_feed_input_margin_end"
+                android:ellipsize="end"
+                android:maxLines="2"
                 android:textColor="?attr/colorPrimaryDark"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
