Fixed scan activity bug. Fixed image captured in product feed activity weird padding.

--- a/app/src/main/res/layout/activity_product_feed.xml
+++ b/app/src/main/res/layout/activity_product_feed.xml
@@ -352,6 +352,7 @@
             android:id="@+id/nutritional_info_pic"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
             android:layout_marginTop="12dp"
             android:contentDescription="@string/nutritional_pic_content_description"
             app:layout_constraintEnd_toEndOf="@id/end_v_guideline"
@@ -396,6 +397,7 @@
             android:id="@+id/product_look_pic"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
             android:layout_marginTop="12dp"
             android:contentDescription="@string/product_look_content_description"
             app:layout_constraintEnd_toEndOf="@id/end_v_guideline"
