--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -31,7 +31,7 @@
                 android:scaleType="centerCrop"
                 android:fitsSystemWindows="true"
                 app:layout_collapseMode="parallax"
-                android:src="@drawable/monash_uni_img"
+                android:src="@drawable/home_img"
                 android:contentDescription="@string/home_collapsing_image_content_description" />
 
             <androidx.appcompat.widget.Toolbar
