--- a/app/src/main/res/layout/fragment_home_content.xml
+++ b/app/src/main/res/layout/fragment_home_content.xml
@@ -36,15 +36,30 @@
         app:layout_constraintStart_toEndOf="@+id/welcome_username_tv"
         app:layout_constraintTop_toBottomOf="@id/top_guideline" />
 
+    <TextView
+        android:id="@+id/recommendation_title"
+        style="@style/Widget.Scannera.TextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/home_recommendation_title"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/top_user_info_barrier" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/home_recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/top_user_info_barrier" />
+        app:layout_constraintTop_toBottomOf="@id/recommendation_title" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/top_guideline"
