Implemented the password reset email auto sender! Adjusted some code style to fix better programming fashion. ForgottenPasswordActivity and PasswordEmailSentActivity only online request left.

--- a/app/src/main/res/layout/activity_forgotten_password.xml
+++ b/app/src/main/res/layout/activity_forgotten_password.xml
@@ -79,7 +79,7 @@
             app:layout_constraintVertical_bias="1.0" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/email_input"
+            android:id="@+id/email_address_input_layout"
             style="@style/Widget.Scannera.TextInputLayout.OutlineBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -90,7 +90,7 @@
             app:startIconDrawable="@drawable/ic_email">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/email_input_et"
+                android:id="@+id/email_address_input_et"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="@string/email_sign_up"
@@ -109,7 +109,7 @@
             android:layout_marginTop="@dimen/top_input_button_margin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/email_input"/>
+            app:layout_constraintTop_toBottomOf="@id/email_address_input_layout"/>
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/email_input_guideline"
