--- a/app/src/main/res/layout/activity_password_email_sent.xml
+++ b/app/src/main/res/layout/activity_password_email_sent.xml
@@ -83,7 +83,7 @@
         android:id="@+id/didnt_receive_email_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="18dp"
@@ -92,21 +92,42 @@
         <TextView
             style="@style/Widget.Scannera.TextView"
             android:id="@+id/didnt_receive_email_tv"
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/didnt_receive_email"
             android:textSize="@dimen/small_text_size" />
 
-        <TextView
-            android:id="@+id/resend_tv"
+        <LinearLayout
+            android:id="@+id/hint_resent_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:clickable="true"
-            android:layout_marginStart="6dp"
-            android:fontFamily="@font/roboto_slab"
-            android:text="@string/resend"
-            android:textColor="@color/pinky_red"
-            android:textSize="@dimen/small_text_size" />
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="6dp"
+            app:layout_constraintTop_toBottomOf="@id/login_btn">
+
+            <TextView
+                style="@style/Widget.Scannera.TextView"
+                android:id="@+id/check_spam_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/check_spam_msg"
+                android:textSize="@dimen/small_text_size" />
+
+            <TextView
+                android:id="@+id/resend_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:layout_marginStart="6dp"
+                android:fontFamily="@font/roboto_slab"
+                android:text="@string/resend"
+                android:textColor="@color/pinky_red"
+                android:textSize="@dimen/small_text_size" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
