--- a/app/src/main/res/layout/fragment_home_content.xml
+++ b/app/src/main/res/layout/fragment_home_content.xml
@@ -14,8 +14,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:fontFamily="@font/roboto_slab"
-        android:maxLength="24"
+        android:maxLength="12"
         android:textColor="@color/black"
+        android:ellipsize="end"
         android:textSize="@dimen/activity_title_text_size"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/top_guideline" />
