--- a/app/src/main/res/layout/activity_account_info.xml
+++ b/app/src/main/res/layout/activity_account_info.xml
@@ -76,21 +76,21 @@
                 android:text="@string/username_default"
                 android:textColor="?attr/colorPrimaryDark"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/edit_username_btn"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toEndOf="@id/ai_username_label"
                 app:layout_constraintTop_toTopOf="parent" />
 
-<!--            <com.google.android.material.button.MaterialButton-->
-<!--                android:id="@+id/edit_username_btn"-->
-<!--                style="@style/Widget.Scannera.Button"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="@string/edit"-->
-<!--                android:textAllCaps="false"-->
-<!--                app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                app:layout_constraintEnd_toEndOf="parent"-->
-<!--                app:layout_constraintTop_toTopOf="parent" />-->
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/edit_username_btn"
+                style="@style/Widget.Scannera.Button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/edit"
+                android:textAllCaps="false"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
