--- a/app/src/main/res/layout/activity_app_guide.xml
+++ b/app/src/main/res/layout/activity_app_guide.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/app_collapsing_appbar_height"
         android:fitsSystemWindows="true"
-        app:elevation="2dp"
+        app:elevation="0dp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
@@ -21,8 +21,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
-            app:contentScrim="@android:color/transparent"
-            app:layout_scrollFlags="scroll|enterAlwaysCollapsed">
+            app:contentScrim="@color/white"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
                 android:id="@+id/home_collapsing_toolbar_img"
@@ -31,32 +31,21 @@
                 android:scaleType="centerCrop"
                 android:fitsSystemWindows="true"
                 app:layout_collapseMode="parallax"
-                android:src="@drawable/home_img"
+                android:src="@drawable/app_guide_img"
                 android:contentDescription="@string/home_collapsing_image_content_description" />
 
             <androidx.appcompat.widget.Toolbar
-                android:id="@+id/home_toolbar"
+                android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
+                android:theme="@style/Widget.Scannera.ToolbarTheme"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
-
-            <TextView
-                android:id="@+id/home_toolbar_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:layout_marginStart="@dimen/home_welcome_text_start_margin"
-                android:layout_marginBottom="8dp"
-                android:fontFamily="@font/amita"
-                android:text="@string/app_name"
-                android:textColor="@color/white"
-                android:textSize="36sp" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/fragment_home_content" />
+    <include layout="@layout/activity_app_guide_content" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
