--- a/app/src/main/res/layout/fragment_home_content.xml
+++ b/app/src/main/res/layout/fragment_home_content.xml
@@ -12,11 +12,10 @@
         android:id="@+id/welcome_username_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="@dimen/home_welcome_text_start_margin"
         android:fontFamily="@font/roboto_slab"
         android:maxLength="14"
         android:textColor="@color/black"
-        android:ellipsize="end"
         android:textSize="@dimen/activity_title_text_size"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/top_guideline" />
